# Dynamic-Risk-Assessment-System

./: cronjob.txt  pyproject.toml  requirements.txt
model/production_deployment/: ingestedfiles.txt  trainedmodel.pkl
src/: apicalls.py  app.py  config.py  deployment.py  diagnostics.py  fullprocess.py  ingestion.py  reporting.py  scoring.py  training.py  wsgi.py
